# stock-backend

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 268ac8b0d2f6_create_users_table.py
stock_backend/: database.py  main.py  models.py  scehemes.py  schemes.py  settings.py
tests/: conftest.py  test_app.py  test_db.py
