[tool.poetry]
name = "stock-backend"
version = "0.1.0"
description = ""
authors = ["Alcides Ribeiro <alcidesribeirosampaioneto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["stardard"], version = "^0.27.1"}
sqlalchemy = "^2.0.26"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.6.1"}


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
include = "(stock_backend|tests)"

[tool.isort]
profile = "black"
line_length = 79
skip_glob = "[!(stock_backend|tests)]*"

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
format = "blue . && isort ."
run = "uvicorn stock_backend.main:app --reload"
pre_test = "task lint"
test = "pytest -s -x --cov=stock_backend -vv"
post_test = "coverage html"